spacing issues

--- a/public_html/css/typography.css
+++ b/public_html/css/typography.css
@@ -154,7 +154,7 @@ loader
 Back to Top
 -----------------------------------------------------------------------*/
 #back-to-top { display: inline !important; }
-#back-to-top .top { z-index: 999; position: fixed; margin: 0px; color: #ffffff; background: #050809; position: fixed; bottom: 25px; right: 25px; z-index: 999; font-size: 26px; width: 50px; height: 50px; text-align: center; line-height: 50px; -webkit-border-radius: 90px; -moz-border-radius: 90px; border-radius: 90px; -webkit-transition: all .3s ease-in-out; -moz-transition: all .3s ease-in-out; transition: all .3s ease-in-out; }
+#back-to-top .top { z-index: 999; position: fixed; margin: 0px; color: #ffffff; background: #050809; position: fixed; bottom: 25px; left: 25px; z-index: 999; font-size: 26px; width: 50px; height: 50px; text-align: center; line-height: 50px; -webkit-border-radius: 90px; -moz-border-radius: 90px; border-radius: 90px; -webkit-transition: all .3s ease-in-out; -moz-transition: all .3s ease-in-out; transition: all .3s ease-in-out; }
 #back-to-top .top:hover { background: #ffb100; color: #ffffff; -webkit-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.1); -moz-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.1); box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.1); }
 
 
